--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,19 @@
-# Core dependencies
-langchain==0.1.0
-langchain-community==0.0.13
+# Dependencias para el chatbot con Gradio
+langchain
+langchain-core
+langchain-community
+langchain-text-splitters
+langchain-huggingface
 
-# Vector stores and embeddings
-chromadb==0.4.22
-faiss-cpu==1.7.4
-sentence-transformers==2.3.1
+# Vector store y embeddings
+faiss-cpu
+sentence-transformers
 
-# LLM and API
-openai==1.10.0
-requests==2.31.0
+# API para LLMs
+requests
 
-# Transformers
-transformers==4.37.2
-torch==2.1.2
-accelerate==0.26.1
-
-# Data handling
-datasets==2.16.1
-pandas==2.2.0
-numpy==1.26.3
-
-# PDF processing
-pymupdf==1.23.8
-
-# Chainlit for chat interface
-chainlit==1.0.0
+# Gradio para la interfaz (versión estable para Docker)
+gradio==3.50.2
 
 # Utilities
-python-dotenv==1.0.1
-tiktoken==0.5.2
-
-# Visualization
-matplotlib==3.8.2
-seaborn==0.13.1
+python-dotenv
